[tool.poetry]
name = "webscraping-with-beautifulsoup-and-requests"
version = "0.1.0"
description = ""
authors = ["Er. Sidharth Pandey <sidp0008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
pandas = "^0.25.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
